test/errors/for3.rcasm
    ldi a,0
!for i in 1 {
    ldi a,0
}
